# mcp-dynamo-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
plans/: mcp-dynamo-improvements.md  mcp-dynamo-server.md
src/mcp_dynamo/: __init__.py  __main__.py  access_control.py  client.py  config.py  errors.py  formatting.py  safety.py  server.py
src/mcp_dynamo/tools/: __init__.py  admin.py  discovery.py  items.py  partiql.py  queries.py
tests/: conftest.py  test_access_control.py  test_admin.py  test_discovery.py  test_edge_cases.py  test_errors.py  test_items.py  test_partiql.py  test_queries.py  test_safety.py
