[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-dynamo"
version = "0.1.0"
description = "Model Context Protocol server exposing Amazon DynamoDB operations to LLM clients over stdio."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Shreeti Shrestha", email = "shreetis13@gmail.com" },
]
keywords = ["mcp", "dynamodb", "aws", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto[dynamodb]>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
mcp-dynamo = "mcp_dynamo.__main__:main"

[project.urls]
Homepage = "https://github.com/shreetishrestha/mcp-dynamo"
Repository = "https://github.com/shreetishrestha/mcp-dynamo"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_dynamo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]
